--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "toc": "npx markdown-toc@1 README.md -i"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "axios": "0.27.2",
     "nanoid": "3.3.4",
     "react": "18.1.0",
