--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "0.27.2",
+    "mongoose": "^6.4.0",
     "nanoid": "3.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
