--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint": "eslint '**/*.{js,jsx}'",
     "eslint:fix": "npm run eslint -- --fix",
     "prepare": "npx husky install",
-    "stylelint": "npx stylelint src/{**/*,*}.{css,js,jsx}",
+    "stylelint": "npx stylelint 'src/{**/*,*}.{js,jsx}'",
     "storybook": "start-storybook -p 6006 -s public",
     "storybook:build": "build-storybook -s public",
     "test:unit": "npm run jest",
@@ -20,6 +20,7 @@
     "toc": "npx markdown-toc@1 README.md -i"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
