--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "0.27.2",
+    "cloudinary": "^1.30.0",
+    "formidable": "^2.0.1",
     "mongoose": "^6.4.0",
     "nanoid": "3.3.4",
     "react": "18.1.0",
